# hpdg

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: basic.rs
bindings/c/: hpdg.h
bindings/python/: lib.rs
docs/: cyaron-api.md  rust-quickstart.md
examples/: full_generation.rs
src/: c_api.rs  compare.rs  core.rs  error.rs  graph.rs  io.rs  lib.rs  math.rs  polygon.rs  query.rs  rng.rs  sequence.rs  string.rs  testcase.rs  traits.rs  utils.rs  vector.rs
